# Ferrite-Engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  SPEC_V1.md
.cargo/: config.toml
app/: Cargo.toml
app/examples/: vulkan_test.rs
app/src/: main.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: coords.rs  direction.rs  lib.rs  morton.rs  voxel.rs
crates/ferrite-render/: Cargo.toml
crates/ferrite-render/shaders/: ray_march.comp.glsl  taa_resolve.comp.glsl
crates/ferrite-render/src/: allocator.rs  buffer.rs  camera.rs  command.rs  context.rs  descriptor.rs  device.rs  image.rs  instance.rs  lib.rs  pipeline.rs  plugin.rs  ray_march_pass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  taa_pass.rs
crates/ferrite-voxel/: Cargo.toml
crates/ferrite-voxel/benches/: voxel_benchmarks.rs
crates/ferrite-voxel/src/: chunk.rs  compression.rs  greedy_mesh.rs  lib.rs  svo.rs  test_gen.rs
tools/: compile_shaders.sh
