[workspace]
resolver = "2"
members = ["crates/ferrite-core", "app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
glam = { version = "0.30", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
