[package]
name = "ferrite-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vulkan rendering backend for Ferrite Engine"

[dependencies]
ferrite-core = { workspace = true }
ferrite-voxel = { workspace = true }
ash = { workspace = true }
gpu-allocator = { workspace = true }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
bevy = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
